k8s/apps/photoprism/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: photoprism
    app.kubernetes.io/name: photoprism
  name: photoprism
  namespace: photoprism
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: photoprism
    app.kubernetes.io/name: photoprism
  type: ClusterIP
